NIFI-11991 Updated NiFi Release Guide Steps and formatting